<package>
  <name>sia20_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for SIA20</p>
    <p>This package contains configuration data, 3D models and launch files for SIA20 robot</p>
  </description>
  <author email="s_harumo@hotmail.co.jp">harumo</author>
  <maintainer email="s_harumo@hotmail.co.jp">harumo</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_kinematics</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>moveit_setup_assistant</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>gazebo</run_depend>
  <export>
    <architecture_independent />
  </export>
</package>
